--- a/another.html
+++ b/another.html
@@ -1,3 +1,4 @@
+
 <!DOCTYPE html>
 <html lang="en">
 <head>
@@ -23,17 +24,17 @@
       100% { background-position: 0% 50%; }
     }
     body.dark-mode {
-      background: linear-gradient(-45deg, #1c1c1c, #2c2c2c, #1f1f1f, #1c1c1c);
-      color: #e0e0e0;
+      background: linear-gradient(-45deg, #000000, #000000, #000000, #000000);
+      color: #00ffff;
     }
 
     /* Sidebar */
     .sidebar {
       width: 250px;
       padding: 10px;
-      background: #e9e9e9;
+      background: #fff;
       overflow-y: auto;
-      border-right: 2px solid #ccc;
+      border-right: 2px solid #fff;
     }
     .sidebar input, .sidebar select {
       width: 100%;
@@ -96,6 +97,7 @@
       background: #007bff;
       color: white;
       font-size: 14px;
+      text-align: center;
       cursor: pointer;
       transition: background 0.3s;
     }
@@ -113,9 +115,9 @@
       margin-top: 20px;
     }
     #lyrics {
-      max-height: 300px;
+      max-height: 150px;
       overflow-y: auto;
-      padding: 20px;
+      padding: 15px;
       background: #fff;
       border-radius: 10px;
       box-shadow: 0 4px 10px rgba(0,0,0,0.1);
@@ -156,6 +158,64 @@
     @media (max-width: 600px) {
       .sidebar { display: none; }
     }
+    
+ /* Fade-in overlay */
+#popup {
+  display: none; /* Hidden by default */
+  position: fixed;
+  z-index: 1000;
+  left: 0;
+  top: 0;
+  width: 100vw;
+  height: 100vh;
+  overflow: auto;
+  background-color: rgba(0, 0, 0, 0.6);
+  backdrop-filter: blur(3px);
+  animation: fadeIn 0.3s ease forwards;
+}
+
+/* Scale-in content box */
+#popup-content {
+  background-color: #fff;
+  margin: 10% auto;
+  padding: 30px 20px;
+  border-radius: 10px;
+  width: 90%;
+  max-width: 400px;
+  box-shadow: 0 5px 15px rgba(0, 0, 0, 0.3);
+  font-family: "Segoe UI", sans-serif;
+  position: relative;
+  text-align: center;
+  transform: scale(0.7);
+  opacity: 0;
+  animation: popupSlide 0.4s ease forwards;
+}
+
+/* Animations */
+@keyframes fadeIn {
+  from { opacity: 0; }
+  to   { opacity: 1; }
+}
+
+@keyframes popupSlide {
+  to {
+    transform: scale(1);
+    opacity: 1;
+  }
+}
+/* Close button (×) */
+#close-button {
+  position: absolute;
+  top: 10px;
+  right: 15px;
+  font-size: 24px;
+  color: #333;
+  cursor: pointer;
+}
+
+#close-button:hover {
+  color: red;
+}
   </style>
 </head>
 <body>
@@ -167,12 +227,6 @@
   </div>
   <div class="main-content">
     <h1>🎶 Music Player + Lyrics</h1>
-    <div class="dark-toggle">
-      <label>
-        🌙 Dark Mode
-        <input type="checkbox" id="darkModeToggle">
-      </label>
-    </div>
     <div class="player">
       <img id="cover" src="" alt="Cover" class="cover">
       <div class="song-title" id="songTitle">No song loaded</div>
@@ -190,50 +244,67 @@
         <input type="range" id="seek" min="0" step="1" value="0"><br>
         Volume: <input type="range" id="vol" min="0" max="1" step="0.01" value="1">
       </div>
-    </div>
-    <div class="lyrics-container">
-      <input type="file" id="fileInput" accept=".lrc">
+
+  
+    <div id="popup">
+  <div id="popup-content">
+    <span id="close-button">&times;</span>
+    <p id="lyricsData"></p>
+  </div>
+</div>
+<div class="lyrics-container">
+     <button onclick="parseLyrics()"> <input type="file" id="fileInput" accept=".lrc"> </button>
       <div id="lyrics"></div>
     </div>
   </div>
+      <div class="dark-toggle">
+      <label>
+        🌙 Dark Mode
+        <input type="checkbox" id="darkModeToggle">
+      </label>
+    </div>
+    </div>
+    
 
   <script>
     // Sample playlist (trimmed for brevity)
         const playlist = [
+      { title: "Justin Bieber - DAISIES", mp3: "songs/Justin Bieber - DAISIES.mp3", cover: "covers/Swag.jpg" },
+      { title: "Justin Bieber - YUKON", mp3: "songs/Justin Bieber - YUKON.mp3", cover: "covers/Swag.jpg" },
+      { title: "Justin Bieber - GO BABY", mp3: "songs/Justin Bieber - GO BABY.mp3", cover: "covers/Swag.jpg" },
+      { title: "01 Justin Bieber - Heartbreaker", mp3: "songs/01 Justin Bieber - Heartbreaker.mp3", cover: "covers/journals.jpg" },
+      { title: "02 Justin Bieber - All That Matters", mp3: "songs/02 Justin Bieber - All That Matters.mp3", cover: "covers/journals.jpg" },
+      { title: "03 Justin Bieber - Hold Tight", mp3: "songs/03 Justin Bieber - Hold Tight.mp3", cover: "covers/journals.jpg" },
+      { title: "10 Justin Bieber - Confident", mp3: "songs/10 Justin Bieber - Confident.mp3", cover: "covers/journals.jpg" },
+      { title: "02 Justin Bieber - Boyfriend", mp3: "songs/02 Justin Bieber - Boyfriend.mp3", cover: "covers/believe.jpg" },
+      { title: "03 Justin Bieber - As Long As You Love Me", mp3: "songs/03 Justin Bieber - As Long As You Love Me.mp3", cover: "covers/believe.jpg" },
+      { title: "10 Justin Bieber - Beauty And A Beat", mp3: "songs/10 Justin Bieber - Beauty And A Beat.mp3", cover: "covers/believe.jpg" },
       { title: "02 Justin Bieber - Favorite Girl (Album Version)", mp3: "songs/02 Justin Bieber - Favorite Girl (Album Version).mp3", cover: "covers/my world.jpg" },
       { title: "01 Justin Bieber - One Time (Album Version)", mp3: "songs/01 Justin Bieber - One Time (Album Version).mp3", cover: "covers/my world.jpg" },
       { title: "05 Justin Bieber - One Less Lonely Girl (Album Version)", mp3: "songs/05 Justin Bieber - One Less Lonely Girl (Album Version).mp3", cover: "covers/my world.jpg" },
       { title: "07 Justin Bieber - Love Me (Album Version)", mp3: "songs/07 Justin Bieber - Love Me (Album Version).mp3", cover: "covers/my world.jpg" },
       { title: "02 Justin Bieber - Somebody To Love", mp3: "songs/02 Justin Bieber - Somebody To Love.mp3", cover: "covers/my world 2.0.jpg" },
       { title: "01 Justin Bieber - Baby", mp3: "songs/01 Justin Bieber - Baby.mp3", cover: "covers/my world 2.0.jpg" },
+      { title: "01 Justin Bieber - Eenie Meenie", mp3: "songs/01 Justin Bieber - Eenie Meenie.mp3", cover: "covers/my world 2.0.jpg" },
       { title: "04 Justin Bieber - U Smile (Album Version)", mp3: "songs/04 Justin Bieber - U Smile (Album Version).mp3", cover: "covers/my world 2.0.jpg" },
       { title: "06 Justin Bieber - Never Let You Go (Album Version)", mp3: "songs/06 Justin Bieber - Never Let You Go (Album Version).mp3", cover: "covers/my world 2.0.jpg" },
       { title: "09 Justin Bieber - Up (Album Version)", mp3: "songs/09 Justin Bieber - Up (Album Version).mp3", cover: "covers/my world 2.0.jpg" },
       { title: "10 Justin Bieber - That Should Be Me (Album Version)", mp3: "songs/10 Justin Bieber - That Should Be Me (Album Version).mp3", cover: "covers/my world 2.0.jpg" },
       { title: "01 Justin Bieber - Never Say Never", mp3: "songs/01 Justin Bieber - Never Say Never.mp3", cover: "covers/never say never.jpg" },
-      { title: "02 Justin Bieber - Under The Mistletoe", mp3: "songs/02 Justin Bieber - Under The Mistletoe.mp3", cover: "covers/under the mistletoe.jpg" },
-      { title: "12 Justin Bieber - Christmas Love", mp3: "songs/12 Justin Bieber - Christmas Love.mp3", cover: "covers/under the mistletoe.jpg" },
-      { title: "02 Justin Bieber - Boyfriend", mp3: "songs/02 Justin Bieber - Boyfriend.mp3", cover: "covers/believe.jpg" },
-      { title: "03 Justin Bieber - As Long As You Love Me", mp3: "songs/03 Justin Bieber - As Long As You Love Me.mp3", cover: "covers/believe.jpg" },
-      { title: "10 Justin Bieber - Beauty And A Beat", mp3: "songs/10 Justin Bieber - Beauty And A Beat.mp3", cover: "covers/believe.jpg" },
-      { title: "01 Justin Bieber - Heartbreaker", mp3: "songs/01 Justin Bieber - Heartbreaker.mp3", cover: "covers/journals.jpg" },
-      { title: "02 Justin Bieber - All That Matters", mp3: "songs/02 Justin Bieber - All That Matters.mp3", cover: "covers/journals.jpg" },
-      { title: "03 Justin Bieber - Hold Tight", mp3: "songs/03 Justin Bieber - Hold Tight.mp3", cover: "covers/journals.jpg" },
-      { title: "10 Justin Bieber - Confident", mp3: "songs/10 Justin Bieber - Confident.mp3", cover: "covers/journals.jpg" },
+      { title: "01 Justin Bieber - Friends", mp3: "songs/01 Justin Bieber - Friends.mp3", cover: "covers/Friends.jpg" },
       { title: "02 Justin Bieber - I'll Show You", mp3: "songs/02 Justin Bieber - I'll Show You.mp3", cover: "covers/purpose.jpg" },
       { title: "03 Justin Bieber - What Do You Mean", mp3: "songs/03 Justin Bieber - What Do You Mean.mp3", cover: "covers/purpose.jpg" },
       { title: "04 Justin Bieber - Sorry", mp3: "songs/04 Justin Bieber - Sorry.mp3", cover: "covers/purpose.jpg" },
       { title: "06 Justin Bieber - Company", mp3: "songs/06 Justin Bieber - Company.mp3", cover: "covers/purpose.jpg" },
       { title: "09 Justin Bieber - Where Are U Now", mp3: "songs/09 Justin Bieber - Where Are U Now.mp3", cover: "covers/where are you now.jpg" },
-      { title: "01 Justin Bieber - Friends", mp3: "songs/01 Justin Bieber - Friends.mp3", cover: "covers/Friends.jpg" },
-      { title: "Justin Bieber - Intentions", mp3: "songs/Justin Bieber - Intentions.mp3", cover: "covers/changes.jpg" },
-      { title: "Justin Bieber - Come Around Me", mp3: "songs/Justin Bieber - Come Around Me.mp3", cover: "covers/changes.jpg" },
       { title: "Justin Bieber - Peaches", mp3: "songs/Justin Bieber - Peaches.mp3", cover: "covers/justice.jpg" },
       { title: "Justin Bieber - Somebody", mp3: "songs/Justin Bieber - Somebody.mp3", cover: "covers/justice.jpg" },
       { title: "Justin Bieber - Honest", mp3: "songs/Justin Bieber - Honest.mp3", cover: "covers/honest.jpg" },
-      { title: "Justin Bieber - DAISIES", mp3: "songs/Justin Bieber - DAISIES.mp3", cover: "covers/Swag.jpg" },
-      { title: "Justin Bieber - YUKON", mp3: "songs/Justin Bieber - YUKON.mp3", cover: "covers/Swag.jpg" },
-      { title: "Justin Bieber - GO BABY", mp3: "songs/Justin Bieber - GO BABY.mp3", cover: "covers/Swag.jpg" },
+      { title: "Justin Bieber - Intentions", mp3: "songs/Justin Bieber - Intentions.mp3", cover: "covers/changes.jpg" },
+      { title: "Justin Bieber - Come Around Me", mp3: "songs/Justin Bieber - Come Around Me.mp3", cover: "covers/changes.jpg" },
+      { title: "02 Justin Bieber - Under The Mistletoe", mp3: "songs/02 Justin Bieber - Under The Mistletoe.mp3", cover: "covers/under the mistletoe.jpg" },
+      { title: "12 Justin Bieber - Christmas Love", mp3: "songs/12 Justin Bieber - Christmas Love.mp3", cover: "covers/under the mistletoe.jpg" },
+      { title: "01 Tyga - Wait For A Minute", mp3: "songs/01 Tyga - Wait For A Minute.mp3", cover: "covers/ait For A Minute.jpg"    },
       { title: "01 One Direction - What Makes You Beautiful", mp3: "songs/01 One Direction - What Makes You Beautiful.mp3", cover: "covers/up all night.jpg" },
       { title: "02 One Direction - Gotta Be You", mp3: "songs/02 One Direction - Gotta Be You.mp3", cover: "covers/up all night.jpg" },
       { title: "03 One Direction - One Thing", mp3: "songs/03 One Direction - One Thing.mp3", cover: "covers/up all night.jpg" },
@@ -248,10 +319,22 @@
       { title: "01 One Direction - Steal My Girl", mp3: "songs/01 One Direction - Steal My Girl.mp3", cover: "covers/four.jpg" },
       { title: "07 One Direction - Night Changes", mp3: "songs/07 One Direction - Night Changes.mp3", cover: "covers/four.jpg" },
       { title: "02 One Direction - Drag Me Down", mp3: "songs/02 One Direction - Drag Me Down.mp3", cover: "covers/Made In The A.M..jpg" },
-      { title: "03 One Direction - Perfect", mp3: "songs03 One Direction - Perfect.mp3", cover: "covers/Made In The A.M..jpg" },
+      { title: "03 One Direction - Perfect", mp3: "songs/03 One Direction - Perfect.mp3", cover: "covers/Made In The A.M..jpg" },
       { title: "08 One Direction - Never Enough", mp3: "songs/08 One Direction - Never Enough.mp3", cover: "covers/Made In The A.M..jpg" },
-      { title: "13 One Direction - History", mp3: "songs/13 One Direction - History.mp3", cover: "covers/Made In The A.M..jpg" },,
-      { title: "01 Justin Bieber - Eenie Meenie", mp3: "songs/01 Justin Bieber - Eenie Meenie.mp3", cover: "covers/my world 2.0.jpg" },
+      { title: "13 One Direction - History", mp3: "songs/13 One Direction - History.mp3", cover: "covers/Made In The A.M..jpg" },
+      { title: "Alesso - Midnight", mp3: "songs/Alesso - Midnight.mp3", cover: "covers/LP1.jpg" },
+      { title: "Liam Payne - Stack It Up", mp3: "songs/Liam Payne - Stack It Up.mp3", cover: "covers/LP1.jpg" },
+      { title: "Liam Payne - Strip That Down", mp3: "songs/Liam Payne - Strip That Down.mp3", cover: "covers/LP1.jpg" },
+      { title: "Liam Payne - For You (Fifty Shades Freed)", mp3: "songs/Liam Payne - For You (Fifty Shades Freed).mp3", cover: "covers/LP1.jpg" },
+      { title: "Liam Payne - Familiar", mp3: "songs/Liam Payne - Familiar.mp3", cover: "covers/LP1.jpg" },
+      { title: "Liam Payne - Polaroid", mp3: "songs/Liam Payne - Polaroid.mp3", cover: "covers/LP1.jpg" },
+      { title: "ZEDD - Get Low", mp3: "songs/ZEDD - Get Low.mp3", cover: "covers/LP1.jpg" },
+      { title: "Liam Payne - Bedroom Floor", mp3: "songs/Liam Payne - Bedroom Floor.mp3", cover: "covers/LP1.jpg" },
+      { title: "Liam Payne - Naughty List", mp3: "songs/Liam Payne - Naughty List.mp3", cover: "covers/Naughty List.jpg" }, 
+      { title: "Austin Mahone - Mmm Yeah (feat. Pitbull)", mp3: "songs/Austin Mahone - Mmm Yeah (feat. Pitbull).mp3", cover: "covers/The Secret.jpg" }, 
+      { title: "06 Austin Mahone - All I Ever Need", mp3: "songs/06 Austin Mahone - All I Ever Need.mp3", cover: "covers/The Secret.jpg" },
+      { title: "01 Austin Mahone - Say You re Just a Friend (feat. Flo Rida)", mp3: "songs/01 Austin Mahone - Say You re Just a Friend (feat. Flo Rida).mp3", cover: "covers/Say You're Just A Friend.jpg" },
+      { title: "02 Omarion - Post to Be (feat. Chris Brown & Jhene Aiko)", mp3: "songs/02 Omarion - Post to Be (feat. Chris Brown & Jhene Aiko).mp3", cover: "covers/Sex Playlist.jpg"  },
       { title: "09 Luis Fonsi - Despacito", mp3: "songs/09 Luis Fonsi - Despacito.mp3", cover: "covers/despacito.jpg" },
       { title: "13 Luis Fonsi - Despacito (Remix)", mp3: "songs/13 Luis Fonsi - Despacito (Remix).mp3", cover: "covers/despacito.jpg" },
       { title: "The Weeknd - Timeless", mp3: "songs/The Weeknd - Timeless.mp3", cover: "covers/timeless.jpg" },
@@ -273,10 +356,19 @@
       { title: "Kendrick Lamar - tv off", mp3: "songs/Kendrick Lamar - tv off.mp3", cover: "covers/gnx.jpg" },
       { title: "Kendrick Lamar - peekaboo", mp3: "songs/Kendrick Lamar - peekaboo.mp3", cover: "covers/gnx.jpg" },
       { title: "Kendrick Lamar - Not Like Us", mp3: "songs/Kendrick Lamar - Not Like Us.mp3", cover: "covers/not like us.jpg" },
+      { title: "2Pac - Hit  Em Up (Single Version)", mp3: "songs/2Pac - Hit  Em Up (Single Version).mp3", cover: "covers/Hit 'Em Up.jpg" },
+      { title: "The Notorious B.I.G. - Big Poppa", mp3: "songs/02 The Notorious B.I.G. - Big Poppa.mp3", cover: "covers/Big Poppa.jpg" },
+      { title: "Eminem - Godzilla", mp3: "songs/Eminem - Godzilla.mp3", cover: "covers/Music To Be Remebered.jpg" },
+      { title: "13 Eminem - Venom (Music From The Motion Picture)", mp3: "songs/13 Eminem - Venom (Music From The Motion Picture).mp3", cover: "covers/Kamikaze.jpg" },
       { title: "11 Justin Timberlake - Not a Bad Thing", mp3: "songs/11 Justin Timberlake - Not a Bad Thing.mp3", cover: "covers/the2020experience.jpg" },
       { title: "Justin Timberlake - Mirrors", mp3: "songs/Justin Timberlake - Mirrors.mp3", cover: "covers/the2020experience(deluxe version).jpg" },
       { title: "01 Justin Timberlake - Can't Stop The Feeling", mp3: "songs/01 Justin Timberlake - Can't Stop The Feeling.mp3", cover: "covers/cant_stop_the_feeling.jpg" },
       { title: "05 Nicki Minaj - Fly", mp3: "songs/05 Nicki Minaj - Fly.mp3", cover: "covers/pink friday.jpg" },
+      { title: "03 Ne-Yo - So Sick", mp3: "songs/03 Ne-Yo - So Sick.mp3", cover: "covers/So Sick.jpg" },
+      { title: "Rihanna - Hate That I Love You", mp3: "songs/Rihanna - Hate That I Love You.mp3", cover: "covers/Good Girl Gone Bad (Reloaded).jpg" },
+      { title: "02 Usher - Yeah!", mp3: "songs/02 Usher - Yeah!.mp3", cover: "covers/confessions.jpg" },
+      { title: "Usher - DJ Got Us Fallin  In Love (feat. Pitbull)", mp3: "songs/Usher - DJ Got Us Fallin  In Love (feat. Pitbull).mp3", cover: "covers/Versus.jpg"    },
+      { title: "14 Young Jeezy - Soul Survivor", mp3: "songs/14 Young Jeezy - Soul Survivor.mp3", cover: "covers/Let's Get It_ Thug Motivation 101 (Deluxe Edition).jpg" },
       { title: "Nicki Minaj - Super Bass", mp3: "songs/Nicki Minaj - Super Bass.mp3", cover: "covers/pink friday.jpg" },
       { title: "Nicki Minaj - Did It On em", mp3: "songs/Nicki Minaj - Did It On em.mp3", cover: "covers/pink friday.jpg" },
       { title: "J. Cole - She Knows", mp3: "songs/J. Cole - She Knows.mp3", cover: "covers/Born Sinner.webp" },
@@ -294,6 +386,7 @@
     const durTime = document.getElementById("durTime");
     const vol = document.getElementById("vol");
     const playlistEl = document.getElementById("playlist");
+    const sidebar = document.getElementById("playlistSidebar");
     const searchInput = document.getElementById("searchInput");
     const artistFilter = document.getElementById("artistFilter");
     const albumFilter = document.getElementById("albumFilter");
@@ -310,9 +403,11 @@
       loadSong(0);
       vol.value = audio.volume;
     };
-
-    // Dark mode
-    darkToggle.onchange = () => document.body.classList.toggle("dark-mode", darkToggle.checked);
+// Dark mode toggle with blur to prevent spacebar hijack
+darkToggle.onchange = () => {
+  document.body.classList.toggle("dark-mode", darkToggle.checked);
+  darkToggle.blur(); // Remove focus so it doesn't hijack spacebar
+};
 
     // Playback controls
     function playPause() { audio.paused? audio.play(): audio.pause(); }
@@ -355,7 +450,7 @@
       });
     }
 
-    // Load song
+ // Load song
     function loadSong(i) {
       const s = playlist[i];
       audio.src = s.mp3;
@@ -364,6 +459,7 @@
       parseLyrics([]); // Clear any existing lyrics
       audio.load();
     }
+
 
     // Lyrics parsing & display
     fileInput.onchange = () => {
@@ -409,6 +505,7 @@
       });
     }
 
+
     // Helpers
     function formatTime(s) {
       const m = Math.floor(s/60), sec = Math.floor(s%60);
@@ -419,17 +516,15 @@
       const ms = Math.floor((s%1)*1000);
       return `[${String(m).padStart(2,'0')}:${String(sec).padStart(2,'0')}.${String(ms).padStart(3,'0')}]`;
     }
-
-// Open file picker with 'y' key (lyrics)
+  
 document.addEventListener("keydown", (e) => {
   const active = document.activeElement;
   const isFormElement = ["INPUT", "TEXTAREA", "SELECT"].includes(active.tagName) || active.isContentEditable;
 
-  // If we're typing in a form element, don't trigger
-  if (isFormElement && active !== fileInput) return;
+  if (isFormElement) return; // Don't trigger shortcuts when typing
 
   switch (e.key.toLowerCase()) {
-    case " ":
+    case " ": // Spacebar: Play/Pause
       e.preventDefault();
       playPause();
       break;
@@ -466,9 +561,8 @@ document.addEventListener("keydown", (e) => {
     case "m":
       toggleMute();
       break;
-    case "y": // ⬅ New shortcut to load lyrics file
-      fileInput.click();
-      break;
+    case "y":
+      parseLyrics();
   }
 });
 
@@ -476,7 +570,3 @@ document.addEventListener("keydown", (e) => {
   </script>
 </body>
 </html>
-
-
-
-
