--- a/Chemistry pt.html
+++ b/Chemistry pt.html
@@ -1,4 +1,3 @@
-
 <!DOCTYPE html>
 <html lang="en">
 <head>
@@ -246,7 +245,7 @@
 <!-- Continue similarly through all periods ... -->
 
 <!-- Period 3 -->
-<button class="element alkali-metal"           style="grid-column:1; grid-row:3;"   data-symbol="Na" data-name="Sodium"        data-atomic="11"  data-mass="22.9897693">Na<br>Sodium</button>
+<button class="element alkali-metal"           style="grid-column:1; grid-row:3;"   data-symbol="Na" data-name="Sodium, Natrium"        data-atomic="11"  data-mass="22.9897693">Na<br>Sodium</button>
 <button class="element alkaline-earth-metal"   style="grid-column:2; grid-row:3;"   data-symbol="Mg" data-name="Magnesium"     data-atomic="12"  data-mass="24.305">Mg<br>Magnesium</button>
 <button class="element post-transition-metal"  style="grid-column:13; grid-row:3;"  data-symbol="Al" data-name="Aluminium"     data-atomic="13"  data-mass="26.981538">Al<br>Aluminium</button>
 <button class="element metalloid"              style="grid-column:14; grid-row:3;"  data-symbol="Si" data-name="Silicon"       data-atomic="14"  data-mass="28.085">Si<br>Silicon</button>
@@ -256,17 +255,17 @@
 <button class="element noble-gas"              style="grid-column:18; grid-row:3;"  data-symbol="Ar" data-name="Argon"         data-atomic="18"  data-mass="39.9">Ar<br>Argon</button>
 
 <!-- Period 4 -->
-<button class="element alkali-metal"           style="grid-column:1; grid-row:4;"   data-symbol="K"  data-name="Potassium"     data-atomic="19"  data-mass="39.0983">K<br>Potassium</button>
+<button class="element alkali-metal"           style="grid-column:1; grid-row:4;"   data-symbol="K"  data-name="Potassium, Kalium"     data-atomic="19"  data-mass="39.0983">K<br>Potassium</button>
 <button class="element alkaline-earth-metal"   style="grid-column:2; grid-row:4;"   data-symbol="Ca" data-name="Calcium"       data-atomic="20"  data-mass="40.08">Ca<br>Calcium</button>
 <button class="element transition-metal"       style="grid-column:3; grid-row:4;"   data-symbol="Sc" data-name="Scandium"      data-atomic="21"  data-mass="44.95591">Sc<br>Scandium</button>
 <button class="element transition-metal"       style="grid-column:4; grid-row:4;"   data-symbol="Ti" data-name="Titanium"      data-atomic="22"  data-mass="47.867">Ti<br>Titanium</button>
 <button class="element transition-metal"       style="grid-column:5; grid-row:4;"   data-symbol="V"  data-name="Vanadium"      data-atomic="23"  data-mass="50.9415">V<br>Vanadium</button>
 <button class="element transition-metal"       style="grid-column:6; grid-row:4;"   data-symbol="Cr" data-name="Chromium"      data-atomic="24"  data-mass="51.996">Cr<br>Chromium</button>
 <button class="element transition-metal"       style="grid-column:7; grid-row:4;"   data-symbol="Mn" data-name="Manganese"     data-atomic="25"  data-mass="54.93804">Mn<br>Manganese</button>
-<button class="element transition-metal"       style="grid-column:8; grid-row:4;"   data-symbol="Fe" data-name="Iron"          data-atomic="26"  data-mass="55.84">Fe<br>Iron</button>
+<button class="element transition-metal"       style="grid-column:8; grid-row:4;"   data-symbol="Fe" data-name="Iron, Ferrum"          data-atomic="26"  data-mass="55.84">Fe<br>Iron</button>
 <button class="element transition-metal"       style="grid-column:9; grid-row:4;"   data-symbol="Co" data-name="Cobalt"        data-atomic="27"  data-mass="58.93319">Co<br>Cobalt</button>
 <button class="element transition-metal"       style="grid-column:10; grid-row:4;"  data-symbol="Ni" data-name="Nickel"        data-atomic="28"  data-mass="58.693">Ni<br>Nickel</button>
-<button class="element transition-metal"       style="grid-column:11; grid-row:4;"  data-symbol="Cu" data-name="Copper"        data-atomic="29"  data-mass="63.55">Cu<br>Copper</button>
+<button class="element transition-metal"       style="grid-column:11; grid-row:4;"  data-symbol="Cu" data-name="Copper, Cuprum"        data-atomic="29"  data-mass="63.55">Cu<br>Copper</button>
 <button class="element transition-metal"       style="grid-column:12; grid-row:4;"  data-symbol="Zn" data-name="Zinc"          data-atomic="30"  data-mass="65.4">Zn<br>Zinc</button>
 <button class="element post-transition-metal"  style="grid-column:13; grid-row:4;"  data-symbol="Ga" data-name="Gallium"       data-atomic="31"  data-mass="69.723">Ga<br>Gallium</button>
 <button class="element metalloid"              style="grid-column:14; grid-row:4;"  data-symbol="Ge" data-name="Germanium"     data-atomic="32"  data-mass="72.63">Ge<br>Germanium</button>
@@ -286,11 +285,11 @@
 <button class="element transition-metal"       style="grid-column:8; grid-row:5;"   data-symbol="Ru" data-name="Ruthenium"     data-atomic="44"  data-mass="101.1">Ru<br>Ruthenium</button>
 <button class="element transition-metal"       style="grid-column:9; grid-row:5;"   data-symbol="Rh" data-name="Rhodium"       data-atomic="45"  data-mass="102.9055">Rh<br>Rhodium</button>
 <button class="element transition-metal"       style="grid-column:10; grid-row:5;"  data-symbol="Pd" data-name="Palladium"     data-atomic="46"  data-mass="106.42">Pd<br>Palladium</button>
-<button class="element transition-metal"       style="grid-column:11; grid-row:5;"  data-symbol="Ag" data-name="Silver"        data-atomic="47"  data-mass="107.868">Ag<br>Silver</button>
+<button class="element transition-metal"       style="grid-column:11; grid-row:5;"  data-symbol="Ag" data-name="Silver, Argentum"        data-atomic="47"  data-mass="107.868">Ag<br>Silver</button>
 <button class="element transition-metal"       style="grid-column:12; grid-row:5;"  data-symbol="Cd" data-name="Cadmium"       data-atomic="48"  data-mass="112.41">Cd<br>Cadmium</button>
 <button class="element post-transition-metal"  style="grid-column:13; grid-row:5;"  data-symbol="In" data-name="Indium"        data-atomic="49"  data-mass="114.818">In<br>Indium</button>
-<button class="element post-transition-metal"  style="grid-column:14; grid-row:5;"  data-symbol="Sn" data-name="Tin"           data-atomic="50"  data-mass="118.71">Sn<br>Tin</button>
-<button class="element metalloid"              style="grid-column:15; grid-row:5;"  data-symbol="Sb" data-name="Antimony"      data-atomic="51"  data-mass="121.76">Sb<br>Antimony</button>
+<button class="element post-transition-metal"  style="grid-column:14; grid-row:5;"  data-symbol="Sn" data-name="Tin, Stannum"           data-atomic="50"  data-mass="118.71">Sn<br>Tin</button>
+<button class="element metalloid"              style="grid-column:15; grid-row:5;"  data-symbol="Sb" data-name="Antimony, Stibium"      data-atomic="51"  data-mass="121.76">Sb<br>Antimony</button>
 <button class="element metalloid"              style="grid-column:16; grid-row:5;"  data-symbol="Te" data-name="Tellurium"     data-atomic="52"  data-mass="127.6">Te<br>Tellurium</button>
 <button class="element halogen"                style="grid-column:17; grid-row:5;"  data-symbol="I"  data-name="Iodine"        data-atomic="53"  data-mass="126.9045">I<br>Iodine</button>
 <button class="element noble-gas"              style="grid-column:18; grid-row:5;"  data-symbol="Xe" data-name="Xenon"         data-atomic="54"  data-mass="131.29">Xe<br>Xenon</button>
@@ -301,15 +300,15 @@
 <button class="element lanthanide"            style="grid-column:3; grid-row:9;"   data-symbol="La" data-name="Lanthanum"     data-atomic="57"  data-mass="138.9055">La<br>Lanthanum</button>
 <button class="element transition-metal"       style="grid-column:4; grid-row:6;"   data-symbol="Hf" data-name="Hafnium"       data-atomic="72"  data-mass="178.49">Hf<br>Hafnium</button>
 <button class="element transition-metal"       style="grid-column:5; grid-row:6;"   data-symbol="Ta" data-name="Tantalum"      data-atomic="73"  data-mass="180.9479">Ta<br>Tantalum</button>
-<button class="element transition-metal"       style="grid-column:6; grid-row:6;"   data-symbol="W"  data-name="Tungsten"      data-atomic="74"  data-mass="183.84">W<br>Tungsten</button>
+<button class="element transition-metal"       style="grid-column:6; grid-row:6;"   data-symbol="W"  data-name="Tungsten, Wolfram"      data-atomic="74"  data-mass="183.84">W<br>Tungsten</button>
 <button class="element transition-metal"       style="grid-column:7; grid-row:6;"   data-symbol="Re" data-name="Rhenium"       data-atomic="75"  data-mass="186.207">Re<br>Rhenium</button>
 <button class="element transition-metal"       style="grid-column:8; grid-row:6;"   data-symbol="Os" data-name="Osmium"        data-atomic="76"  data-mass="190.2">Os<br>Osmium</button>
 <button class="element transition-metal"       style="grid-column:9; grid-row:6;"   data-symbol="Ir" data-name="Iridium"       data-atomic="77"  data-mass="192.22">Ir<br>Iridium</button>
 <button class="element transition-metal"       style="grid-column:10; grid-row:6;"  data-symbol="Pt" data-name="Platinum"      data-atomic="78"  data-mass="195.08">Pt<br>Platinum</button>
-<button class="element transition-metal"       style="grid-column:11; grid-row:6;"  data-symbol="Au" data-name="Gold"          data-atomic="79"  data-mass="196.96657">Au<br>Gold</button>
-<button class="element transition-metal"       style="grid-column:12; grid-row:6;"  data-symbol="Hg" data-name="Mercury"       data-atomic="80"  data-mass="200.59">Hg<br>Mercury</button>
+<button class="element transition-metal"       style="grid-column:11; grid-row:6;"  data-symbol="Au" data-name="Gold, Aurum"          data-atomic="79"  data-mass="196.96657">Au<br>Gold</button>
+<button class="element transition-metal"       style="grid-column:12; grid-row:6;"  data-symbol="Hg" data-name="Mercury, Hydrargyrum"       data-atomic="80"  data-mass="200.59">Hg<br>Mercury</button>
 <button class="element post-transition-metal"  style="grid-column:13; grid-row:6;"  data-symbol="Tl" data-name="Thallium"      data-atomic="81"  data-mass="204.383">Tl<br>Thallium</button>
-<button class="element post-transition-metal"  style="grid-column:14; grid-row:6;"  data-symbol="Pb" data-name="Lead"          data-atomic="82"  data-mass="207">Pb<br>Lead</button>
+<button class="element post-transition-metal"  style="grid-column:14; grid-row:6;"  data-symbol="Pb" data-name="Lead, Plumbum"          data-atomic="82"  data-mass="207">Pb<br>Lead</button>
 <button class="element post-transition-metal"  style="grid-column:15; grid-row:6;"  data-symbol="Bi" data-name="Bismuth"       data-atomic="83"  data-mass="208.9804">Bi<br>Bismuth</button>
 <button class="element metalloid"              style="grid-column:16; grid-row:6;"  data-symbol="Po" data-name="Polonium"      data-atomic="84"  data-mass="208.98243">Po<br>Polonium</button>
 <button class="element halogen"                style="grid-column:17; grid-row:6;"  data-symbol="At" data-name="Astatine"      data-atomic="85"  data-mass="209.98715">At<br>Astatine</button>
@@ -386,7 +385,7 @@
     </div>
   </div>
    
-  <p>From:<a href="pubchem.ncbi.nlm.nih.gov/periodic-table/#property=GroupBlock" >PubChem</a></p>
+  <p>From:<a href="https://pubchem.ncbi.nlm.nih.gov/periodic-table/" >PubChem</a></p>
   </section>
 
    <hr>
@@ -570,4 +569,8 @@ document.getElementById('close-button').onclick = function () {
 };
   </script>
 </body>
-</html
+</html>
+
+
+
+
