--- a/good.html
+++ b/good.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <link rel="icon" type="image/png" href="/eFootball.png">
+  <link rel="icon" type="image/png" href="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcTq7lhC8TcsOLuIh3FQ3pqs692g0zWTwIH8Kg&s">
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.8/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-sRIl4kxILFvY47J16cr9ZwB07vP4J8+LH7qKQnuqkuIAvNWLzeN8tE5YBujZqJLB" crossorigin="anonymous">
  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.8/dist/js/bootstrap.bundle.min.js" integrity="sha384-FKyoEForCGlyvwx9Hj09JcYn3nv7wiPVlz7YYwJrWVcXK/BmnVDxM+D2scQbITxI" crossorigin="anonymous"></script>
   <meta charset="UTF-8" />
@@ -88,7 +88,7 @@
 </head>
 <body>
    <header class="site-header"><img src="https://www.konami.com/ci/logo/konami_logo_normal.png" alt="KONAMI Logo" style="width: 100px;"></header>
-  <img src="/eFoot.png" style="display:block; margin: 0 auto;">
+  <img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcQhCq5rDiiyU6dfYjGPC5dtsWOdWirvbeNBxA&s" style="display:block; margin: 0 auto;">
    <h1>Welcome to eFootball™</h1>
 
   <div class="section">
