--- a/good.html
+++ b/good.html
@@ -47,7 +47,9 @@
       font-weight: normal;
     }
   h2 {
-      font-family: 'eFootballStencil', Century, sans-serif;
+    background-color: #000096;
+    color: #fff000; 
+    font-family: 'eFootballStencil', Century, sans-serif;
       font-weight: normal;
       display: block;
   } 
@@ -100,6 +102,9 @@
     <button type="button" data-bs-target="#carouselMerged" data-bs-slide-to="0" class="active" aria-current="true"></button>
     <button type="button" data-bs-target="#carouselMerged" data-bs-slide-to="1"></button>
     <button type="button" data-bs-target="#carouselMerged" data-bs-slide-to="2"></button>
+    <button type="button" data-bs-target="#carouselMerged" data-bs-slide-to="3"></button>
+    <button type="button" data-bs-target="#carouselMerged" data-bs-slide-to="4"></button>
+    
   </div>
 
   <!-- Slides -->
@@ -123,6 +128,20 @@
       <img src="https://img.konami.com/efootball/s/img/promotion/campaign/744/promo_campaign.png" class="d-block" alt="...">
       <div class="carousel-caption d-none d-md-block">
          <h4>CAMPAIGN</h4>
+      </div>
+    </div>
+   
+    <div class="carousel-item" data-bs-interval="2000">
+      <img src="https://img.konami.com/efootball/s/img/promotion/campaign/743/promo_campaign.png" class="d-block" alt="...">
+      <div class="carousel-caption d-none d-md-block">
+        <h4>CAMPAIGN</h4>
+      </div>
+    </div>
+
+     <div class="carousel-item" data-bs-interval="2000">
+      <img src="https://img.konami.com/efootball/s/img/promotion/agent/1099/promo_agent.png" class="d-block" alt="...">
+      <div class="carousel-caption d-none d-md-block">
+        <h4>SPECIAL PLAYER LIST</h4>
       </div>
     </div>
 
