--- a/good.html
+++ b/good.html
@@ -92,7 +92,7 @@
    <header class="site-header"><img src="https://www.konami.com/ci/logo/konami_logo_normal.png" alt="KONAMI Logo" style="width: 100px;"></header>
   <img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcQhCq5rDiiyU6dfYjGPC5dtsWOdWirvbeNBxA&s" style="display:block; margin: 0 auto;">
    <h1>Welcome to eFootball™</h1>
-
+ <img src="https://img.konami.com/efootball/s/img/main_page_1.png?v=875" class="d-block w-100" alt="...">
   <div class="section">
     <h3>Latest Event</h3>
 <div id="carouselMerged" class="carousel carousel-dark slide" data-bs-ride="carousel">
@@ -170,4 +170,5 @@
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.8/dist/js/bootstrap.min.js" integrity="sha384-G/EV+4j2dNv+tEPo3++6LCgdCROaejBqfUeNjuKAiuXbjrxilcCdDz6ZAVfHWe1Y" crossorigin="anonymous"></script>
 </body>
 </html>
+
 
