--- a/Chemistry pt.html
+++ b/Chemistry pt.html
@@ -3,6 +3,7 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1"/>
+  <link rel="icon" type="image/png" href="https://th.bing.com/th/id/OIP.fwRC_4rB9YxB6u7V74ScTAHaHa?w=191&h=191&c=7&r=0&o=7&cb=ucfimg2&pid=1.7&rm=3&ucfimg=1">
   <title>Chemistry World – Periodic Table Grid</title>
   <style>
     body {
@@ -610,6 +611,7 @@ document.getElementById('close-button').onclick = function () {
   </script>
 </body>
 </html>
+
 
 
 
