--- a/contact.html
+++ b/contact.html
@@ -6,13 +6,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
   <title>Contact Me</title>
   <!-- Font Awesome CDN -->
-<link
-  rel="stylesheet"
-  href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.1/css/all.min.css"
-  integrity="sha512-xxx…"
-  crossorigin="anonymous"
-  referrerpolicy="no-referrer"
-/>
+<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.1/css/all.min.css" integrity="sha512-xxx…" crossorigin="anonymous" referrerpolicy="no-referrer"/>
 <link rel="icon" href="webd.ico" type="image/x-icon" />
 
   <style>
@@ -98,6 +92,21 @@
       background-color: #e6b800;
     }
 
+    .map-container {
+  margin-top: 15px;
+  width: 100%;
+  height: 250px;
+  border-radius: 8px;
+  overflow: hidden;
+  box-shadow: 0 0 10px rgba(0,0,0,0.4);
+}
+
+.map-container iframe {
+  width: 100%;
+  height: 100%;
+  border: 0;
+}
+
     @media (max-width: 600px) {
       .contact-box {
         padding: 25px;
@@ -157,6 +166,11 @@
         <p><strong>Phone:</strong> <a href="tel:+251954862187">+251954862187</a></p>
         <p><strong>Email:</strong> <a href="mailto:soressaaddisu2@gmail.com">soressaaddisu2@gmail.com</a></p>
         <p><strong>Location:</strong> Ethiopia, ET</p>
+
+<div class="map-container">
+  <iframe src="https://www.google.com/maps?q=Addis%20Ababa%2C%20Ethiopia&output=embed" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
+</div>
+
 		<div class="social-media">
          <a href="https://facebook.com/SoressaAddisu" target="_blank"><i class="fab fa-facebook-f"></i></a>
          <a href="https://instagram.com/soressaaddisu11" target="_blank"><i class="fab fa-instagram"></i></a>
