--- a/bgimg.html
+++ b/bgimg.html
@@ -140,7 +140,7 @@
     <section id="home">
       <h2>Welcome to My Website</h2>
       <p>Explore a modern web experience with smooth scrolling, a responsive layout, and stunning visuals.</p>
-      <a href="http://localhost//portfolio/portfolio.html">
+      <a href="http://127.0.0.1:5500/portfolio%20(1).html">
       <button class="btn">Explore Now</button>
       </a>
     </section>
@@ -158,7 +158,7 @@
     <section id="contact">
       <h2>Contact</h2>
       <p>Have a question or project in mind? Reach out and let's talk!</p>
-      <a href="http://localhost//portfolio/contact.html">
+      <a href="http://127.0.0.1:5500/contact.html">
       <button class="btn">Get in Touch</button>
       </a>
     </section>
