--- a/contact.html
+++ b/contact.html
@@ -20,7 +20,7 @@
       height: 100%;
       font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
       color: white;
-      background: url('images/background.jpg') no-repeat center center fixed;
+      background: url('https://tse1.mm.bing.net/th/id/OIP.FQoeaJJVGngfp42HGfso3QHaEK?cb=ucfimg2&ucfimg=1&rs=1&pid=ImgDetMain&o=7&rm=3') no-repeat center center fixed;
       background-size: cover;
     }
 
